re PR bootstrap/60984 (AIX: gcc-4.9.0 bootstrap fails in stage-2)

PR bootstrap/60984
	* ipa-inline-transform.c (inline_call): Use add CALLEE_REMOVED parameter.
	* ipa-inline.c (inline_to_all_callers): If callee was removed; return.
	(ipa_inline): Loop inline_to_all_callers until no more aliases are removed.

From-SVN: r210673